quick fix for the navbar overlap issue

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -129,7 +129,7 @@ h1 {
 #nav.affix {
     position: fixed;
     top: 0;
-    z-index:10;
+    z-index: 1000;
     -webkit-transition: all .6s ease-in-out;
 }
 
