--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -13,7 +13,7 @@
   padding: 0;
   background: #ffffff;
   overflow: scroll;
-  z-index: -1000;
+  z-index: 0;
 }
 
 #sidebar * {
